--- a/Views/product1.ejs
+++ b/Views/product1.ejs
@@ -104,9 +104,9 @@
     <div class="row">
       <div class="col-md-1 d-none d-md-block">
         <div class="d-flex flex-column gap-2 thumbnail-img">
-          <img src="/images/side.png" class="img-thumbnail" onclick="changeImage(this)">
-          <img src="/images/top view.png" class="img-thumbnail" onclick="changeImage(this)">
-          <img src="/images/bottom biew.png" class="img-thumbnail" onclick="changeImage(this)">
+          <img src="/images/side.png" class="img-thumbnail h-80" onclick="changeImage(this)">
+          <img src="/images/top view.png" class="img-thumbnail h-80" onclick="changeImage(this)">
+          <img src="/images/bottom biew.png" class="img-thumbnail h-80" onclick="changeImage(this)">
         </div>
       </div>
       <div class="col-md-5">
